# nutricount

./: .bandit  .editorconfig  .env.example  .gitignore  .htaccess  .isort.cfg  .pre-commit-config.yml  ARCHITECTURE.md  CALAPP_IMPLEMENTATION_QUICKSTART.md  CALAPP_QUICK_REFERENCE.md  CALAPP_REFERENCE_ANALYSIS.md  CALAPP_SUMMARY_RU.md  CHANGELOG.md  CLAUDE.md  CODEBASE_ARCHITECTURE_ANALYSIS.md  CODE_QUALITY.md  COMMUNITY_GUIDELINES.md  CONTRIBUTING.md  DEMO_QUICK_REFERENCE.md  DESIGN_PATTERNS_GUIDE.md  DOCUMENTATION_CONSOLIDATION_SUMMARY.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_TREE.txt  E2E_FIXES_SUMMARY.md  E2E_PHASE3_VALIDATION_GUIDE.md  E2E_QUICK_START.md  E2E_TESTS_FIX_SUMMARY.md  E2E_TESTS_RUN63_ANALYSIS.md  E2E_TEST_ANALYSIS.md  E2E_TEST_FIXES.md  E2E_TEST_MODAL_FIXES.md  E2E_TEST_VALIDATION.md  E2E_VALIDATION_GUIDE.md  E2E_VALIDATION_INSTRUCTIONS.md  EDUCATIONAL_EXPANSION_PLAN.md  ENABLE_DEMO.md  INTEGRATED_ROADMAP.md  ISSUE_E2E_TEST_FIXES.md  LICENSE  MUTATION_TESTING.md  (+113 more)
.github/: CONFIGURATION_SUMMARY.md  COPILOT_AGENT_GUIDE.md  README.md  copilot-instructions-local.md  copilot-instructions.md  copilot-setup-steps.yml  pull_request_template.md
archive/: README.md
demo/: DEPLOYMENT.md  README.md  index.html  manifest.json
docs/: CALAPP_FEATURE_COMPARISON.md  DEMO_TESTING_CHECKLIST.md  GITHUB_PAGES_SETUP.md  README.md
frontend/: README.md  package-lock.json  package.json
migrations/: 001_initial.sql  002_fix_dish_calculations.sql  003_fix_log_calories.sql  004_fix_stats_calculations.sql  005_update_log_view.sql  006_create_user_profile.sql  007_add_fiber_category_fields.py  007_add_fiber_category_fields.sql  007_add_fiber_category_fields_fixed.sql  007_add_fiber_category_fields_simple.sql  008_fix_dish_calories_calculation.sql  009_update_schema_v2.sql  010_add_cooked_weight_to_dishes.sql  migrate.py
repositories/: __init__.py  base_repository.py  dish_repository.py  fasting_repository.py  log_repository.py  product_repository.py
routes/: __init__.py  auth.py  dishes.py  (+8 more)
(+201 files in other folders)
