[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nutrition-tracker"
version = "2.0.0"
description = "WCAG 2.2 compliant nutrition tracking app with Telegram Web App support"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Nutrition Tracker Team", email = "team@nutrition-tracker.com"}
]
keywords = ["nutrition", "health", "keto", "telegram", "webapp", "accessibility"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: JavaScript",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Typing :: Typed"
]
requires-python = ">=3.11"
dependencies = [
    "Flask>=2.3.0",
    "flask-cors>=4.0.0",
    "python-dotenv>=1.0.0",
    "gunicorn>=21.0.0",
    "psutil>=5.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-flask>=1.3.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.7.0",
    "bandit>=1.7.5"
]
monitoring = [
    "prometheus-client>=0.19.0",
    "statsd>=4.0.0"
]

[project.urls]
Homepage = "https://github.com/your-username/nutrition-tracker"
Documentation = "https://nutrition-tracker.readthedocs.io/"
Repository = "https://github.com/your-username/nutrition-tracker.git"
"Bug Tracker" = "https://github.com/your-username/nutrition-tracker/issues"
Changelog = "https://github.com/your-username/nutrition-tracker/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
